<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_blue"
    tools:context=".activities.SearchActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="219dp"
        android:alpha="0.4"
        android:scaleType="centerCrop"
        android:src="@drawable/airline_bg_img"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/plan_your_journey"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvTitle"
        android:layout_marginTop="60dp">

        <LinearLayout
            android:id="@+id/llTripType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvRoundTrip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/round_trip"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvOneWayTrip"
                android:layout_marginStart="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_way"
                android:textSize="14sp"
                android:textColor="@color/white" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/llTripType"
            android:layout_marginTop="20dp"
            android:background="@drawable/card_curved_top">

            <LinearLayout
                android:id="@+id/llLocations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="32dp"
                        android:text="@string/from"
                        android:textAllCaps="true"
                        android:textColor="@color/subtitle_text"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tvFromCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="0dp"
                        android:text="MLB"
                        android:textAllCaps="true"
                        android:textColor="@color/dark_blue"
                        android:textSize="40sp" />

                    <TextView
                        android:id="@+id/tvFromName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="0dp"
                        android:text="Melbourne"
                        android:textAllCaps="true"
                        android:textColor="@color/normal_text"
                        android:textSize="12sp" />

                </LinearLayout>

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/ic_travel_icon" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="32dp"
                        android:text="@string/to"
                        android:textAllCaps="true"
                        android:textColor="@color/subtitle_text"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tvToCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="32dp"
                        android:text="SYD"
                        android:textAllCaps="true"
                        android:textColor="@color/dark_blue"
                        android:textSize="40sp" />

                    <TextView
                        android:id="@+id/tvToName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="32dp"
                        android:text="Sydney"
                        android:textAllCaps="true"
                        android:textColor="@color/normal_text"
                        android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llDates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llLocations"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="32dp"
                        android:text="@string/depart"
                        android:textAllCaps="true"
                        android:textColor="@color/subtitle_text"
                        android:textSize="12sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="12dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="start"
                            android:layout_marginStart="32dp"
                            android:layout_marginTop="0dp"
                            android:src="@drawable/ic_date" />

                        <TextView
                            android:id="@+id/tvDepartDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginStart="5dp"
                            android:text="@string/default_date"
                            android:textAllCaps="true"
                            android:textColor="@color/subtitle_text"
                            android:textSize="16sp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="32dp"
                        android:text="@string/return_"
                        android:textAllCaps="true"
                        android:textColor="@color/subtitle_text"
                        android:textSize="12sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="32dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="start"
                            android:layout_marginStart="32dp"
                            android:layout_marginTop="0dp"
                            android:src="@drawable/ic_date" />

                        <TextView
                            android:id="@+id/tvReturnDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginStart="5dp"
                            android:text="@string/default_date"
                            android:textAllCaps="true"
                            android:textColor="@color/subtitle_text"
                            android:textSize="16sp" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llOther"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llDates"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/passenger_luggage"
                    android:textAllCaps="true"
                    android:textColor="@color/subtitle_text"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/llSeats"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="14dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="start"
                            android:layout_marginStart="32dp"
                            android:layout_marginTop="0dp"
                            android:src="@drawable/ic_passengers" />

                        <TextView
                            android:id="@+id/tvSeats"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginStart="8dp"
                            android:text="@string/seat"
                            android:textAllCaps="true"
                            android:textColor="@color/subtitle_text"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llWeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="14dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="start"
                            android:layout_marginStart="32dp"
                            android:layout_marginTop="0dp"
                            android:src="@drawable/ic_bag" />

                        <TextView
                            android:id="@+id/tvWeight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginStart="8dp"
                            android:text="@string/kgs"
                            android:textAllCaps="true"
                            android:textColor="@color/subtitle_text"
                            android:textSize="14sp" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llClass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llOther"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/class_"
                    android:textAllCaps="true"
                    android:textColor="@color/subtitle_text"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="14dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvEconomy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="@string/economy"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvBusiness"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="30dp"
                        android:text="@string/business"
                        android:textAllCaps="true"
                        android:textColor="@color/subtitle_text"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvFirstClass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="30dp"
                        android:text="@string/first_class"
                        android:textAllCaps="true"
                        android:textColor="@color/subtitle_text"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSearch"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="16dp"
                android:enabled="false"
                android:background="@drawable/curved_button_theme"
                android:text="@string/search_flights"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>